--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: riborex
 Type: Package
 Title: Identification of differential translation from Ribo-seq data
-Version: 1.0
+Version: 1.0.0
 Date: 2016-07-11
 Author: Wenzheng Li, Weili Wang and Andrew D. Smith
 Maintainer: Wenzheng Li <wenzhenl@usc.edu>
-Description: Fast and flexible identification of differentially translated genes from Ribo-seq data using existing RNA-seq analysis methods as engines
+Description: Fast and flexible identification of differentially translated
+             genes from Ribo-seq data using existing RNA-seq analysis
+             methods as engines
 License: GPL-3
-Imports:
-  DESeq2
-  edgeR
+Imports: DESeq2, edgeR
